package ch.bzz.handy.service;

import ch.bzz.handy.data.DataHandler;

import javax.ws.rs.GET;
import javax.ws.rs.Path;
import javax.ws.rs.Produces;
import javax.ws.rs.core.MediaType;
import javax.ws.rs.core.Response;
import java.io.FileOutputStream;
import java.io.IOException;
import java.nio.file.Files;
import java.nio.file.Paths;

/**
 * test service
 */
@Path("test")
public class TestService {
    /**
     * bestätigen das die Applikation läuft
     * @return  Nachricht
     */
    @GET
    @Path("test")
    @Produces(MediaType.TEXT_PLAIN)
    public Response test() {

        return Response
                .status(200)
                .entity("Test erfolgreich")
                .build();
    }
    /**
     * wiederherstellen der json-files
     * @return Nachricht
     */
    @GET
    @Path("restore")
    @Produces(MediaType.TEXT_PLAIN)
    public Response restore() {
        try {
            java.nio.file.Path path = Paths.get(Config.getProperty("handymodellJSON"));
            String filename = path.getFileName().toString();
            String folder = path.getParent().toString();

            byte[] handymodellJSON = Files.readAllBytes(Paths.get(folder, "backup", filename));
            FileOutputStream fileOutputStream = new FileOutputStream(Config.getProperty("handymodellJSON"));
            fileOutputStream.write(handymodellJSON);

            path = Paths.get(Config.getProperty("handymarkeJSON"));
            filename = path.getFileName().toString();
            folder = path.getParent().toString();

            byte[] handymarkeJSON = Files.readAllBytes(Paths.get(folder, "backup", filename));
            fileOutputStream = new FileOutputStream(Config.getProperty("handymarkeJSON"));
            fileOutputStream.write(handymarkeJSON);

        } catch (IOException e) {
            e.printStackTrace();
        }

        DataHandler.initLists();
        return Response
                .status(200)
                .entity("Erfolgreich")
                .build();
    }
}

